Group variadic allocations with same stackframe

The variadic allocations were kept separately which may bring allocation
sites for string to be pruned. This patch is merging them. An allocation
is uniquify based on it's stackframe and it's context-id, and no longer
with the size.

R=erikchen@chromium.org, brettw@chromium.org
Bug: 762056
Change-Id: Ic8b674c96be603b335234799cbcf6dcf53033869